--- a/src/components/HomePage/home-page.module.scss
+++ b/src/components/HomePage/home-page.module.scss
@@ -1,10 +1,5 @@
 .container {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    width: 100vw;
-    height: 100vh;
-
-    // & .aside {
-        
-    // }
+  width: 100vw;
+  height: 100vh;
+  position: relative;
 }
