Add countries page

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -12,7 +12,7 @@
 
     --color-body-background: #FFFFFF;
     --color-red-main: #FF3F40;
-    --color-blue-main: #4080FF;
+    --color-blue-main: #6c7ae0;
     --color-grey-main: #999999;
 
     --spacing-layout-elements: 1.5em;
