Styled marker and get country stats from map and search box

--- a/src/components/Map/Marker/marker.module.scss
+++ b/src/components/Map/Marker/marker.module.scss
@@ -8,12 +8,17 @@
     background: #FFFFFF;
     border-radius: 0.5em;
     border: 1px solid var(--color-grey-main);
-    padding: 0.5em;
-    min-width: 15em;
+    // padding: 1em;
+    min-width: 20em;
+    font-size: 1.3em;
 
     & > p {
         display: flex;
-        padding-bottom: 0.3em;
+        padding: 0.5em;
+
+        &:nth-child(2n) {
+            background: #f8f6ff;
+        }
 
         & .info {
             margin-left: auto;
