--- a/src/components/Search/search.module.scss
+++ b/src/components/Search/search.module.scss
@@ -35,5 +35,10 @@
     border-bottom-right-radius: 0.3em;
     font-size: 1.1em;
     cursor: pointer;
+
+    &:hover {
+      background: #FFFFFF;
+      color: var(--color-blue-main);
+    }
   }
 }
