--- a/src/components/CountriesPage/countries-page.module.scss
+++ b/src/components/CountriesPage/countries-page.module.scss
@@ -7,5 +7,10 @@
     justify-content: space-between;
     margin-bottom: var(--spacing-layout-elements);
     align-items: center;
+
+    & a:first-of-type {
+      margin-right: var(--spacing-layout-elements);
+      width: 13em;
+    }
   }
 }
