--- a/src/components/CountryCard/country-card.module.scss
+++ b/src/components/CountryCard/country-card.module.scss
@@ -1,19 +1,19 @@
 .more-info {
-  padding-bottom: 0;
   background: #FFFFFF;
   border-radius: 0.5em;
   border: 1px solid var(--color-grey-main);
   min-width: 20em;
   font-size: 1.3em;
+  padding-bottom: 0;
 
-  &>li {
+  & li {
     display: flex;
     align-items: center;
     padding: 0.5em;
     margin-bottom: 0.3em;
 
     &:nth-child(2n) {
-      background: #f8f6ff;
+      background: #EEEEEE;
     }
 
     &:last-child {
