--- a/src/components/InfoBox/info-box.module.scss
+++ b/src/components/InfoBox/info-box.module.scss
@@ -8,7 +8,17 @@
   box-shadow: 0 0 0.3em 0 rgba(0, 0, 0, 0.5);
   padding: 1em;
 
+  @media (max-width: 350px) {
+    right: 0.6em;
+  }
+
   & .search-box {
     margin-bottom: var(--spacing-layout-elements);
+  }
+
+  & .buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
