--- a/src/components/CountriesPage/Skeleton/skeleton.module.scss
+++ b/src/components/CountriesPage/Skeleton/skeleton.module.scss
@@ -1,36 +1,42 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: var(--spacing-layout-elements);
-  align-items: center;
+.container {
+  width: 90%;
+  margin: 2em auto;
 
-  & .button {
-    margin-right: var(--spacing-layout-elements);
+  & .header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: var(--spacing-layout-elements);
+    align-items: center;
+
+    & .button {
+      margin-right: var(--spacing-layout-elements);
+    }
+
+    & .search {
+      width: 350px;
+      height: 33px;
+
+      @media (max-width: 1023px) {
+        width: 312px;
+      }
+
+      @media (max-width: 650px) {
+        width: 275px;
+      }
+
+      @media (max-width: 425px) {
+        width: 210px;
+      }
+
+      @media (max-width: 350px) {
+        width: 160px;
+      }
+    }
   }
 
-  & .search {
-    width: 350px;
-    height: 33px;
-
-    @media (max-width: 1023px) {
-      width: 312px;
-    }
-
-    @media (max-width: 650px) {
-      width: 275px;
-    }
-
-    @media (max-width: 425px) {
-      width: 210px;
-    }
-    
-    @media (max-width: 350px) {
-      width: 160px;
-    }
+  & .map {
+    height: 80vh;
+    width: 100%;
   }
-}
 
-.map {
-  height: 80vh;
-  width: 100%;
 }
