--- a/src/components/HomePage/Skeleton/skeleton.module.scss
+++ b/src/components/HomePage/Skeleton/skeleton.module.scss
@@ -20,6 +20,10 @@
       min-width: 332px;
     }
 
+    @media (max-width: 350px) {
+      min-width: 302px;
+    }
+
     & .search-box {
       margin-bottom: var(--spacing-layout-elements);
     }
