Add close button in coutry card

--- a/src/components/CountryCard/country-card.module.scss
+++ b/src/components/CountryCard/country-card.module.scss
@@ -1,10 +1,26 @@
 .container {
   background: #FFFFFF;
   border-radius: 0.5em;
-  border: 1px solid var(--color-grey-main);
   min-width: 20em;
   font-size: 1.3em;
   transform: translate(-50%, 0);
+
+  & .close {
+    display: block;
+    padding: 0.5em;
+    margin-left: auto;
+    border: 0;
+    background: transparent;
+    outline: none;
+    cursor: pointer;
+
+    &>i {
+      color: var(--color-red-main);
+      font-size: 1.3em;
+      display: block;
+      outline: none;
+    }
+  }
 
   & .more-info {
     padding-bottom: 0;
