--- a/src/components/InfoBox/info-box.module.scss
+++ b/src/components/InfoBox/info-box.module.scss
@@ -20,5 +20,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+   
+    & .language-buttons {
+      margin-left: auto;
+
+      & > button:first-child {
+        margin-right: 0.5em;
+      }
+    }
   }
 }
