--- a/src/components/Table/table.module.scss
+++ b/src/components/Table/table.module.scss
@@ -54,6 +54,8 @@
       z-index: 100;
       top: 0;
       box-shadow: 0.5px 0px 0 0.5px #000;
+      -webkit-box-shadow: 0.5px 0px 0 0.5px #000;
+      -moz-box-shadow: 0.5px 0px 0 0.5px #000;
 
       & .name {
         margin-right: 0.3em;
@@ -70,6 +72,8 @@
         z-index: 99;
         background: #FFF;
         box-shadow: 0.5px 0px 0 0.5px #000;
+        -webkit-box-shadow: 0.5px 0px 0 0.5px #000;
+        -moz-box-shadow: 0.5px 0px 0 0.5px #000;
       }
     }
   }
