--- a/src/components/Table/table.module.scss
+++ b/src/components/Table/table.module.scss
@@ -56,6 +56,8 @@
       box-shadow: 0.5px 0px 0 0.5px #000;
       -webkit-box-shadow: 0.5px 0px 0 0.5px #000;
       -moz-box-shadow: 0.5px 0px 0 0.5px #000;
+      -webkit-appearance: none;
+
 
       & .name {
         margin-right: 0.3em;
@@ -74,6 +76,7 @@
         box-shadow: 0.5px 0px 0 0.5px #000;
         -webkit-box-shadow: 0.5px 0px 0 0.5px #000;
         -moz-box-shadow: 0.5px 0px 0 0.5px #000;
+        -webkit-appearance: none;
       }
     }
   }
