--- a/src/components/Table/table.module.scss
+++ b/src/components/Table/table.module.scss
@@ -17,6 +17,14 @@
   border: 1px solid black;
 }
 
+.no-scroll {
+  overflow: unset;
+
+  & thead tr {
+    border-bottom: 0
+  }
+}
+
 .container {
   width: 100%;
   height: 100%;
@@ -54,6 +62,7 @@
       z-index: 100;
       top: 0;
       box-shadow: 1px 0px 0 1px #000;
+      user-select: none;
 
       & .name {
         margin-right: 0.3em;
